Code check in By Sagar

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflownew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflownew.xhtml
@@ -28,7 +28,10 @@
             $(document).ready(function () {
                   $('.ui-fileupload-cancel').hide();
           });
-            $('.ui-fileupload-upload').onclick
+//            $( ".ui-fileupload-upload" ).click(function() {
+//                alert( "Handler for .click() called." );
+//            });
+
 
         </script>
         <p:panel id="reviewBlkPanel" rendered="#{investmentmodel.reviewPanel}">
