commited by sagar for css changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -32,7 +32,7 @@
     <div class="Container100" style="">
         <div class="Wid100 uobCoreLabel">Invest for</div>
         <p:selectOneMenu id="uobddselection" value="#{uobpb.goal}"
-                         styleClass="Wid100 uob_selectDropdown">
+                         styleClass="Wid100 uob_selectDropdown goalselectinvest">
             <p:ajax listener="#{uobpb.onGoalChangeValue}"
                     update=":ceForm:graphArea, :ceForm:buttonArea"/>
             <f:selectItem itemLabel="Choose One" itemValue=""/>
