--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -45,7 +45,7 @@
         <p:panelGrid columns="1" layout="grid" class="FormContent"
                      styleClass="Container100 Responsive100 liabilityCenterContent_uob"
                      style="border:0px !important; background:none;margin-bottom:10px; text-align: center;">
-            <p:selectOneRadio value="#{uobpb.accountFinancials.dependent}" id="uobdddependents" stytleclass="fltr">
+            <p:selectOneRadio value="#{uobpb.accountFinancials.dependent}" id="uobdddependents" styleClass="fltr dependentsradio">
                 <f:selectItem id="uobddd0" itemLabel="0" itemValue="0"/>
                 <f:selectItem id="uobddd1" itemLabel="1" itemValue="1"/>
                 <f:selectItem id="uobddd2" itemLabel="2" itemValue="2"/>
