--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
@@ -18,7 +18,7 @@
             <h5>
                 2. Do you have any other sources of income?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans4}" id="uobddsoi"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans4}" styleClass="Goalchoose" id="uobddsoi"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:graphArea, :ceForm:buttonArea"/>
