--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q4.xhtml
@@ -18,7 +18,7 @@
             <h5>
                 4. What level of investment risk are you willing to take?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans6}" id="uobrbir" styleClass="riskQ"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans6}" id="uobrbir" styleClass="riskQ Goalchoose"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:graphArea, :ceForm:buttonArea"/>
