--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
@@ -19,7 +19,7 @@
                 6. Most investments can fluctuate up and down(i.e volatility). How much could your investment fall in value
                 over 12 month period before you begin to feel concerned and anxious?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans8}" id="uobq6rb"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans8}" id="uobq6rb" styleClass="Goalchoose"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:graphArea, :ceForm:buttonArea"/>
