--- a/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflowRew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflowRew.xhtml
@@ -23,13 +23,12 @@
                                             value="#{asstMgmtRvw.performanceAproved}"
                                             itemLabel="Performance Data Approved">
                                         <p:ajax
-                                                update="approveForm:approveArea"
                                                 listener="${asstMgmtRvw.getApproveStatus}"/>
                                     </p:selectBooleanCheckbox>
                                     <label class="rollbackbutton">
-                                        <p:commandButton type="button" icon="fa fa-undo" value="Approve"
-                                                         styleClass="awBtn Wid100"
-                                                         actionListener="#{asstMgmtRvw.showTemplateForApprove}">
+                                        <p:commandButton value="Approve" id="PerfAppr"
+                                                         styleClass="awBtn Wid100" ajax="true" actionListener="#{asstMgmtRvw.showTemplateForApprove}"
+                                                         update="approveForm:approveArea">
                                         </p:commandButton>
                                     </label>
                                     <div class="reviewbarContainer">
@@ -299,14 +298,13 @@
                                     value="#{asstMgmtRvw.projectionAproved}"
                                     itemLabel="Performance Data Approved">
                                 <p:ajax
-                                        update="approveForm:approveArea"
                                         listener="${asstMgmtRvw.getApproveStatus}"/>
                             </p:selectBooleanCheckbox>
 
                             <label class="rollbackbutton">
-                                <p:commandButton type="button" icon="fa fa-undo" value="Approve"
-                                                 styleClass="awBtn Wid100"
-                                                 actionListener="#{asstMgmtRvw.showTemplateForApprove}">
+                                <p:commandButton value="Approve" id="ProjAppr"
+                                                 styleClass="awBtn Wid100" ajax="true" actionListener="#{asstMgmtRvw.showTemplateForApprove}"
+                                                 update="approveForm:approveArea">
                                 </p:commandButton>
                             </label>
                             <div class="Container100 TextAlCenter customRadioBlock">
